--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>welcome</p>
     <h2>this is my first git project</h2>
+    <img src="Screenshot 2024-07-29 211743.png" alt="">
 </body>
 </html>
